fix(css): text layout issues

--- a/src/app/styles/notion.css
+++ b/src/app/styles/notion.css
@@ -20,8 +20,16 @@
   @apply !bg-[hsl(var(--b1))] !text-[hsl(var(--bc))];
 }
 
-[data-theme="dark"] .notion-table-of-contents-item {
-  color: #b0b0b0 !important;
+.notion-table-of-contents-item {
+  @apply dark:!text-[#b0b0b0];
+}
+
+.notion-table-of-contents a {
+  @apply dark:text-[hsl(var(--bc))] dark:opacity-70;
+}
+
+.notion-asset-caption {
+  @apply text-[hsl(var(--bc))] opacity-70;
 }
 
 .notion-code,
@@ -77,6 +85,12 @@
 
 .notion-text {
   @apply !ml-1;
+}
+
+@media (max-width: 767px) {
+  .notion-text {
+    @apply !ml-0;
+  }
 }
 
 @media (max-width: 767px) {
